<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">立讯会议音箱</string>

    <string name="connected_devices" tools:ignore="ExtraTranslation">连接设备</string>
    <string name="setting" tools:ignore="ExtraTranslation">设置</string>
    <string name="voice_reminder_language" tools:ignore="ExtraTranslation">语音提醒语言</string>
    <string name="chinese" tools:ignore="ExtraTranslation">中文</string>
    <string name="english" tools:ignore="ExtraTranslation">English</string>
    <string name="automatic_shutdown" tools:ignore="ExtraTranslation">自动关机</string>
    <string name="temporarily_unavailable">暂不可用</string>
    <string name="circular_light_strip_setting">环形灯带设置</string>
    <string name="music_meeting_mode">音乐/会议模式</string>
    <string name="music_mode">音乐模式</string>
    <string name="meeting_mode">会议模式</string>
    <string name="manage_notifications_and_prompts">管理通知和提示</string>
    <string name="update_device_firmware">更新设备固件</string>
    <string name="speaker_information">音箱信息</string>
    <string name="bluetooth_list_management">蓝牙列表管理</string>
    <string name="ota_update">OTA升级</string>
    <string name="find_myself">Find My</string>
    <string name="clear_bluetooth_list">清空蓝牙列表</string>
    <string name="clear_pairing_information_with_one_tap">一键清空配对信息</string>
    <string name="sound_location">人声定位</string>
    <string name="speaker_circular_light_sound_localization_cue">环形灯人声定位提示</string>
    <string name="automatic_reconnection">自动回连</string>
    <string name="automatically_reconnect_to_paired_devices">自动回连已配对设备</string>
    <string name="voice_reminder">语音提醒</string>
    <string name="factory_reset">恢复出厂</string>
    <!--TAG STAT-->
    <string name="tag_sound_location">sound_location</string>
    <string name="tag_reconnect">reconnect</string>
    <string name="tag_remind">remind</string>
    <string name="tag_language">language</string>
    <string name="tag_lauto_off">auto_off</string>
    <string name="tag_clear_list">clear_list</string>
    <string name="tag_factory_reset">factory_reset</string>
    <string name="tag_distribution_network">distribution_network</string>
    <string name="tag_light_strip_setting">light_strip_setting</string>
    <string name="tag_music_mode">music_mode</string>
    <string name="tag_notifications_prompt">notifications_prompt</string>
    <string name="tag_update_firmware">update_firmware</string>
    <string name="tag_bluetooth_list">update_bluetooth_list</string>
    <string name="tag_ota_update">ota_update</string>
    <string name="tag_find_my">find_my</string>
    <string name="tag_speaker_information">speaker_information</string>
    <string name="confirm">确定</string>
    <string name="concel">取消</string>
    <string name="connect_fail_tip">连接失败\n请刷新设备列表后再试</string>
    <string name="factory_reset_tip">音箱将恢复出厂设置\n需重新配对连接</string>
    <string name="disconnect_reconnect_tip">连接已断开\n请重新连接</string>
    <string name="disconnect_warning">连接已断开</string>
    <string name="clear_pair_tip">清空后需重新配对连接</string>
    <string name="off_time_ten">10分钟后</string>
    <string name="off_time_thirty">30分钟后</string>
    <string name="off_time_sixty">60分钟后</string>
    <string name="off_time_on">不关机</string>
    <string name="disconnect">断开连接</string>
    <string name="distribution_network">一键配网</string>
    <string name="disconnect_tip">音箱将与手机断开连接</string>
    <string name="find_my_tip">播放声音 查找音响</string>
    <string name="searching">设备搜索中...</string>
    <string name="search_device_no">未搜索到设备，请刷新重试</string>
    <string name="audio_play">play</string>
    <string name="audio_stop">stop</string>

    <!--TAG END-->
    <string-array name="device_language">
        <item>中文</item>
        <item>English</item>
    </string-array>
    <string-array name="off_time_key">
        <item>time_ten</item>
        <item>time_thirty</item>
        <item>time_sixty</item>
        <item>time_on</item>
    </string-array>
    <string-array name="off_time_value">
        <item>10分钟后</item>
        <item>30分钟后</item>
        <item>60分钟后</item>
        <item>不关机</item>
    </string-array>
    <string name="shutdown_conditions">在仅建立蓝牙连接的情况下，若蓝牙设备和音箱在一定时间内无任何操作，则音箱将自动关机</string>
    <string name="input_wifi_name">请输入WIFI名称</string>
    <string name="password">密码：</string>
    <string name="wifi">WIFI：</string>
    <string name="input_wifi_password">请输入WIFI密码</string>

    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="meeting_minutes">会议纪要</string>
    <string name="meeting_minutes_list">会议纪要列表</string>

    <string name="synchronizing_meeting">正在同步音箱所有会议纪要…</string>
    <string name="synchronizing_meeting_fail">同步失败，请刷新重试</string>
    <string name="no_meeting_minutes">暂无文件生成，快去开会吧</string>
    <string name="file_details">文件详情</string>
    <string name="file_size">文件大小</string>
    <string name="save_time">保存时间</string>
    <string name="file_path">文件路径</string>

    <string name="file_not_exist_tip">文件不存在，可能已经被删除，请重新获取。</string>
    <string name="delete_tip">将同步删除音箱和手机中 保存的文件</string>

    <string name="connect_net_tip">账号密码不能为空</string>
    <string name="start_scan">开始扫描</string>
    <string name="bluetooth_permission">没有获取蓝牙权限</string>
    <string name="scan_end">扫描结束</string>
    <string name="connecting">正在连接中</string>
    <string name="under_development">正在开发中…</string>
    <string name="bluetooth_switch">蓝牙开关未打开</string>
    <string name="other_devices_conncect">当前有设备正在连接</string>

    <string name="distribution_network_success">配网成功</string>
    <string name="distribution_network_start">wifi信息输入成功,配网中</string>
    <string name="distribution_network_fail">联网失败，音箱正在连接其他WiFi，您也可以重新输入wifi和密码</string>

    <string name="not_click_frequent">请不要频繁点击</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="not_supported">暂不支持</string>

    <string name="upgrade_notification_title">音箱更新</string>
    <string name="upgrade_notification_message">音箱版本下载完成，请升级!</string>

    <string name="ota_title">软件升级</string>
    <string name="ota_address">远程地址</string>
    <string name="upgrade_conditions">升级条件</string>
    <string name="ota_attention">请不要在更新中操作音箱</string>
    <string name="check_network">正在检查音箱配网…</string>
    <string name="check_battery">正在检查音箱电量…</string>
    <string name="ota_version">版本</string>
    <string name="local_version">本地版本</string>
    <string name="latest_version">最新版本</string>
    <string name="speaker_network_connected">音箱已配网</string>
    <string name="speaker_network_disconnected">音箱未配网</string>
    <string name="battery_greater_than_15">音箱电量＞15%</string>
    <string name="battery_below_15">音箱电量低于15%</string>
    <string name="obtain_failed">获取失败</string>
    <string name="not_allow_upgrade">升级条件不满足</string>
    <string name="consult_mail">请咨询%s</string>
    <string name="already_latest_version">已是最新版本</string>
    <string name="modify_remote_address">修改远程地址</string>
    <string name="modify">修改</string>
    <string name="edit_address">请输入远程地址</string>
    <string name="invalid_address">您输入的是无效地址</string>
    <string name="checking_upgrade">检查升级中</string>
    <string name="download_progress">下载…%1$d%%</string>
    <string name="upgrade_failed">升级失败，请重新检查后再试!</string>
    <string name="recheck">重新检查</string>
    <string name="start_upgrade">开始升级</string>
    <string name="network_not_connected">网络未连接</string>
    <string name="network_connected">网络已连接</string>
    <string name="speaker_upgrading_tip">音箱软件更新中，预计1分钟\n即将断连!\n请等待音箱开机</string>
    <string name="email_content">请给出新的软件升级远程地址</string>
    <string name="no_email_client">没有可用的邮箱客户端</string>
</resources>