<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@drawable/ic_dialog_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/distribution_network"
        android:textColor="@color/color_device_title"
        android:textSize="@dimen/font_size_18" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/wifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:textColor="@color/color_device_title"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/et_wifi_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg_selected"
            android:ellipsize="middle"
            android:hint="@string/input_wifi_name"
            android:maxLines="1"
            android:layout_toRightOf="@+id/wifi_tv"
            android:layout_alignStart="@+id/et_wifi_pwd"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/wifi_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/color_device_title"
            android:layout_below="@+id/wifi_tv"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/font_size_16" />

        <EditText
            android:id="@+id/et_wifi_pwd"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg_selected"
            android:ellipsize="middle"
            android:hint="@string/input_wifi_password"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/wifi_pwd_tv"
            android:layout_below="@+id/et_wifi_name"
            android:textSize="@dimen/font_size_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:background="@drawable/selector_btn_confirm"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_marginLeft="38dp"
            android:background="@drawable/selector_btn_confirm"
            android:gravity="center"
            android:text="@string/concel"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_14" />
    </LinearLayout>

</LinearLayout>