<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/upgrade_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/ota_attention"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#FFE0E0"
            android:drawableLeft="@mipmap/ic_red_warning"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/ota_attention"
            android:textColor="#ffff2857"
            android:textSize="12sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ota_attention"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ota_address"
                android:textColor="#ff3d3d3d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/ota_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ff3d3d3d"
                    android:textSize="16sp"
                    tools:text="192.254.5.25" />

                <ImageView
                    android:id="@+id/address_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_edit"
                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="#D8D8D8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/upgrade_conditions"
                android:textColor="#ff3d3d3d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/check_net_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_network"
                    android:textColor="#ff3d3d3d"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/connect_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_loading" />

                <ImageView
                    android:id="@+id/connect_state"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="20dp"
                    android:src="@mipmap/ic_success_state" />

            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/upgrade_conditions_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/check_battery_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/check_battery"
                    android:textColor="#ff3d3d3d"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/battery_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_loading" />

                <ImageView
                    android:id="@+id/battery_state"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:src="@mipmap/ic_error_state" />
            </com.google.android.flexbox.FlexboxLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="#D8D8D8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ota_version"
                android:textColor="#ff3d3d3d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_version"
                    android:textColor="#ff3d3d3d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/local_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#ff3d3d3d"
                    android:textSize="12sp"
                    tools:text="v1.0.0.1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_version"
                    android:textColor="#ff3d3d3d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/latest_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textColor="#ff3d3d3d"
                    android:textSize="12sp"
                    tools:text="..." />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:progressDrawable="@drawable/custom_progressbar" />

        <TextView
            android:id="@+id/state_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="16sp"
            tools:text="下载..20%" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tip_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_blue_warning"
            android:layout_above="@+id/tip_tv"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/tip_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speaker_upgrading_tip"
            android:textColor="#ff3d3d3d"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
</FrameLayout>
