<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:background="#fff">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close_img"
            android:layout_gravity="right"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_details"
            android:textColor="#ff767676"
            android:textSize="@dimen/font_size_12"
            />

        <TextView
            android:id="@+id/meeting_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Meeting Minutes_20241129.txt"
            android:textColor="#ff3e3e3e"
            android:layout_marginTop="6dp"
            android:textSize="@dimen/font_size_18"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_size"
                    android:textColor="#ff767676"
                    android:textSize="@dimen/font_size_12"
                    />

                <TextView
                    android:id="@+id/file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="45.6KB"
                    android:textColor="#ff3e3e3e"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/font_size_18"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_time"
                    android:textColor="#ff767676"
                    android:textSize="@dimen/font_size_12"
                    />

                <TextView
                    android:id="@+id/save_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12/02 19:55"
                    android:textColor="#ff3e3e3e"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/font_size_18"
                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:textColor="#ff767676"
            android:textSize="12sp"
            android:layout_marginTop="18dp"
            />

        <TextView
            android:id="@+id/file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="内部存储/MeetingMinutes/Meeting Minutes_20241129.txt"
            android:textColor="#ff3d8afb"
            android:textSize="@dimen/font_size_18"
            android:layout_marginTop="6dp"
            />
    </LinearLayout>

</RelativeLayout>
